hphp/hack/test/typecheck/readonly/constfuns.php.exp
File "constfuns.php", line 31, characters 14-15:
Invalid argument (Typing[4411])
  File "constfuns.php", line 24, characters 8-65:
  Function readonly return mismatch
  File "constfuns.php", line 24, characters 8-65:
  This function returns a readonly value
  File "constfuns.php", line 15, characters 39-53:
  This function does not return a readonly value
File "constfuns.php", line 32, characters 14-15:
Invalid argument (Typing[4411])
  File "constfuns.php", line 32, characters 14-15:
  This function is not marked <<__ConstFun>>
  File "constfuns.php", line 15, characters 55-56:
  It is incompatible with this parameter, which is marked <<__ConstFun>>
